# cropbox

./: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
cropbox/: clock.py  context.py  graph.py  logger.py  stage.py  statevar.py  system.py  test.py  time.py  trace.py  track.py  unit.py  util.py  var.py
tests/: graph.html  test_lotka_volterra.py  test_photosynthesis.py  test_root_structure.py  test_system.py  test_unit.py
tests/garlic/: test_phenology.py
tests/garlic/atmosphere/: calendar.py  sun.py  vaporpressure.py  weather.py
tests/garlic/morphology/: leaf.py  nodalunit.py  organ.py  root.py  sheath.py
tests/garlic/phenology/: bulbing.py  death.py  emergence.py  floralinitiation.py  germination.py  leafappearance.py  leafinitiation.py  phenology.py  scape.py
tests/garlic/physiology/: area.py  count.py  gasexchange.py  mass.py  nitrogen.py  organ.py  photosynthesis.py  plant.py  radiation.py  ratio.py  trait.py  water.py  weight.py
tests/garlic/rhizosphere/: soil.py
tests/graph/: package.json  webpack.config.js
tests/graph/src/: index.html  index.js
