[tool.poetry]
name = "cropbox"
version = "0.0.1"
description = ""
authors = ["Kyungdahm Yun <tomyun@gmail.com>"]

[tool.poetry.dependencies]
numpy = "^1.16"
pandas = "^0.24.1"
pint = "^0.9.0"
python = "^3.7"
scipy = "^1.2"

[tool.poetry.dev-dependencies]
matplotlib = "^3.0"
pyglet = "^1.3"
pytest = "^4.3"
seaborn = "^0.9.0"
trimesh = "^2.37"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
