[tool.poetry]
name = "cropbox"
version = "0.0.1"
description = ""
authors = ["Kyungdahm Yun <tomyun@gmail.com>"]

[tool.poetry.dependencies]
networkx = "^2.3"
numpy = "^1.16"
pandas = "^0.24.1"
pint = "^0.9.0"
python = "^3.6"
scipy = "=1.1.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
astpretty = "^1.6"
matplotlib = "^3.0"
pdbpp = "^0.10"
pyglet = "^1.3"
pytest = "^5.0"
pytest-profiling = "^1.7"
seaborn = "^0.9.0"
trimesh = "^2.38"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
